Fix scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,6 @@ h1 > small {
   SIDEBAR
 */
 .with-sidebar {
-  overflow: hidden;
 }
 
 .with-sidebar > * {
@@ -63,7 +62,6 @@ h1 > small {
   margin: calc(10px / 2);
   flex-basis: 270px;
   flex-grow: 1;
-  overflow: auto;
 }
 
 .with-sidebar > * > :first-child {
@@ -83,7 +81,7 @@ h1 > small {
 }
 
 sidebar {
-  overflow: hidden;
+  height: fit-content;
   padding: 10px;
 }
 
@@ -102,7 +100,6 @@ sidebar > ul > li > span {
 
 sidebar > ul > li > ul > li {
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
   margin: 0;
   padding: 3px 3px 3px 20px; 
@@ -117,6 +114,12 @@ sidebar > ul > li > ul > li > span:first-child {
 heading > h1 {
   padding: 10px;
   margin: 0;
+}
+
+.content-heading {
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 /*
